ui/client/src/components/recipe/Recipe.scss
@use '@blueprintjs/core/lib/scss/variables' as bp;

.recipe-container {
  padding: 20px;
  border-radius: bp.$pt-border-radius * 2;
  margin-top: 15px;

  .recipe {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    text-align: justify;
    text-justify: inter-word;

    .#{bp.$bp-ns}-editable-text {
      width: 100%;
      span.#{bp.$bp-ns}-popover2-target {
        display: inline;
      }
    }

    .#{bp.$bp-ns}-editable-text-content {
      // chrome is strange
      overflow: hidden !important;
    }

    .text-image-wrapper {
      width: 100%;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: flex-start;
      margin: 10px 0;

      .text-wrapper {
        min-width: 0;
        flex: 1 1 0;
        padding-right: 20px;
        .category-select {
          max-width: 23ch;
        }
      }
    }
    .title-wrapper {
      width: 100%;
      display: flex;
      justify-content: space-between;
      align-items: center;
      margin-bottom: 15px;

      .title {
        font-family: 'Montserrat Alternates', sans-serif;
        // undo callout heading css (_callout.scss:56)
        line-height: unset;
        margin-bottom: unset;
        margin-top: unset;
      }
      .edit-container {
        flex-basis: 1;
        flex-shrink: 0;
      }
    }
    .user {
      margin-top: 20px;
    }
    .ingredients-title,
    .description-title {
      margin-top: 10px;
      margin-bottom: 5px;
    }

    .ingredients-title-wrapper {
      margin-top: 20px;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    .description,
    .ingredients-line,
    .no-ingredients {
      margin-left: 20px;
      max-width: calc(100% - 20px);
    }

    .description {
      margin-top: 3px;
      line-height: 1.5;
      width: 100%;
    }

    .image {
      cursor: pointer;
      max-width: 35%;
      flex: 1 0 30%;
      align-self: center;
      img {
        max-width: 100%;
        max-height: 50vh;
        object-fit: cover;
        border-radius: 6px;
        box-shadow: bp.$pt-dark-elevation-shadow-2;
      }
      img:hover {
        box-shadow: bp.$pt-dark-elevation-shadow-3;
      }
    }
    .image-button {
      flex: 0 1 auto;
      align-self: center;
    }
    .category-select,
    .category-select .#{bp.$bp-ns}-input {
      font-family: 'Montserrat Alternates', sans-serif;
      font-style: italic;
    }

    .ingredients-line,
    .ingredients-line-draggable {
      display: flex;
      align-items: flex-start;
      margin-top: 3px;
      margin-bottom: 3px;
      .#{bp.$bp-ns}-icon {
        margin-right: 5px;
        padding: 1px 0;
      }
      .ingredients-line-cross:hover {
        cursor: pointer;
        box-shadow: bp.$pt-dark-elevation-shadow-3;
      }
    }
  }

  .title.#{bp.$bp-ns}-skeleton {
    height: 35px;
    width: 300px;
  }

  .category-select.#{bp.$bp-ns}-skeleton {
    display: inline-block;
    height: 20px;
    width: 250px;
  }
  .ingredients-line .ingredients-line-text {
    white-space: break-spaces;
  }
  .ingredients-line-draggable .ingredients-line-text {
    white-space: break-spaces;
  }

  .ingredients-line .#{bp.$bp-ns}-skeleton {
    display: inline-block;
    width: 250px;
    height: 1em;
  }
  .description.#{bp.$bp-ns}-skeleton {
    width: 800px;
    height: 4.8em;
  }

  .no-ingredients {
    color: rgba(bp.$gray1, 0.6);
  }
}

.#{bp.$bp-ns}-dark .recipe-container {
  background-color: bp.$dark-gray4;
}

.#{bp.$bp-ns}-dark .no-ingredients {
  color: rgba(bp.$gray4, 0.6);
}
.popover-button-container {
  display: flex;
  .popover-left {
    margin-right: 15px;
  }
}

.description.#{bp.$bp-ns}-editable-text {
  width: 100%;
  .#{bp.$bp-ns}-popover-wrapper,
  .#{bp.$bp-ns}-popover-target {
    display: block;
    width: 100%;
  }
}
.description .#{bp.$bp-ns}-editable-text-content {
  overflow: auto;
  white-space: pre-wrap;
  word-wrap: break-word;
  text-overflow: unset;
}

.bottom-padding {
  height: 40vh;
}

.recipe-container-mobile {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: justify;
  text-justify: inter-word;
  overflow: hidden;

  .title {
    font-family: 'Montserrat Alternates', sans-serif;
    text-align: center;
    width: 100%;
    .#{bp.$bp-ns}-input {
      font-family: 'Montserrat Alternates', sans-serif;
    }
  }

  .category-select {
    font-family: 'Montserrat Alternates', sans-serif;
    font-style: italic;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    .#{bp.$bp-ns}-button {
      font-family: 'Montserrat Alternates', sans-serif;
      font-style: italic;
    }
  }

  .ingredients-title,
  .description-title {
    margin-top: 10px;
    margin-bottom: 5px;
  }

  .ingredients-title-wrapper {
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  // .description,
  .ingredients-line {
    margin-left: 20px;
    max-width: calc(100% - 40px);
  }
  .ingredients-line-draggable {
    margin-left: 0px;
    max-width: calc(100% - 40px);
  }

  .ingredients-edit,
  .description {
    margin-left: 15px;
    margin-top: 5px;
    width: calc(100vw - 60px);
  }

  .description {
    line-height: 1.5;
    white-space: pre-wrap;
    word-wrap: break-word;
  }

  .text-wrapper {
    margin: 15px;
    width: calc(100% - 30px);
  }

  .image {
    cursor: pointer;
    flex: 1 1 auto;
    width: 100%;
    height: 30vh;
    img {
      width: 100%;
      max-height: 30vh;
      object-fit: cover;
    }
  }
  .image-button {
    display: block;
    margin: 0 auto;
    margin-top: 15px;
  }

  .title.#{bp.$bp-ns}-skeleton {
    height: 30px;
    width: 90vw;
    margin: 0 auto;
    margin-bottom: 15px;
  }

  .category-select.#{bp.$bp-ns}-skeleton {
    height: 20px;
    width: 60vw;
    margin: 0 auto;
  }

  .ingredients-line-text.#{bp.$bp-ns}-skeleton {
    display: inline-block;
    width: 40vw;
    height: 1em;
  }
  .description.#{bp.$bp-ns}-skeleton {
    width: 90vw;
    height: 4.8em;
  }
  .user {
    margin-top: 15px;
  }

  .#{bp.$bp-ns}-editable-text {
    // width: 100%;
    span.#{bp.$bp-ns}-popover2-target {
      display: inline;
    }
  }
}
.edit-container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

